Fix media queue author overflow

--- a/app/renderer/components/media/Media.css
+++ b/app/renderer/components/media/Media.css
@@ -34,3 +34,10 @@
   font-size: 8px;
   margin-right: 4px;
 }
+
+.author {
+  composes: single-line from 'styles/text.css';
+  display: inline-block;
+  max-width: 140px;
+  vertical-align: middle;
+}
